#6: Mitigate performance impact of FX calculations